core/src/snapshots/ark_0_zheng__snapshot_tests__while_loop_bytecode.snap
---
source: core/src/snapshot_tests.rs
expression: opcodes
---
[
    "Push(Integer(0))",
    "Store(\"i\")",
    "Load(\"i\")",
    "Push(Integer(10))",
    "Lt",
    "JmpIfFalse(11)",
    "Load(\"i\")",
    "Push(Integer(1))",
    "Add",
    "Store(\"i\")",
    "Jmp(2)",
    "Push(Unit)",
]
